--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="unit two-thirds">
           <p> I'm a technology enthusiast with a passion for
-          creating new things. I recently just finished the Makers Academy coding course and
+          creating new things. I recently finished the Makers Academy coding course and
           am currently looking for full-time employment as a junior web developer in
           London. </p>
         </div>
@@ -58,7 +58,7 @@
           <h4>The Brooklyn Bar</h4>
           <img class="projectImg" src="./images/brooklynbar.png" alt="Brooklyn Bar">
           <p> A website for 'The Brooklyn Bar' located in Loughborough. Built for
-          a friends colleague using Wordpress, along with setup of the domain and
+          a friend's colleague using Wordpress, along with setup of the domain and
           hosting packages and email accounts. </p>
           <a class="viewLink" href="http://thebrooklynbar.co.uk">View Site</a>
         </div>
@@ -66,7 +66,7 @@
           <h4>Ushare</h4>
           <img class="projectImg" src="./images/ushare.png" alt="Ushare">
           <p> An Android/iOS app that matches users based on their location and
-          destination, to find others around them whom with which they can share
+          destination, to find others around them with whom they can share
           an Uber Cab with. Built in 2 weeks in a team of four. More information
           on the Github repo. </p>
           <a class="viewlink"
