Spec compliance + readability

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
+<!DOCTYPE html>
 <html>
-
 <head>
-  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-  <meta content="utf-8" http-equiv="encoding">
-  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700'
-  rel='stylesheet' type='text/css'>
-  <link type="text/css" rel="stylesheet" href="style.css" />
-  <link type="text/css" rel="stylesheet" href="gridism.css" />
-
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>N Green | Junior Web Developer</title> 
+
+  <title>N Green | Junior Web Developer</title>
+
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat:400,700">
+  <link rel="stylesheet" href="gridism.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -37,7 +36,7 @@
       <h1>About</h1>
       <div class="grid">
         <div class="unit one-third">
-          <img id="selfie" src="./images/selfie.jpg">
+          <img id="selfie" src="./images/selfie.jpg" alt="selfie.jpg">
         </div>
         <div class="unit two-thirds">
           <p> I'm a technology enthusiast with a passion for
@@ -70,7 +69,7 @@
           an Uber Cab with. Built in 2 weeks in a team of four. More information
           on the Github repo. </p>
           <a class="viewlink"
-            href="http://github.com/nathanielgreen/Ushare">View Github Repo</a>
+            href="https://github.com/nathanielgreen/Ushare">View Github Repo</a>
         </div>
       </div>
       <div class="grid">
@@ -81,7 +80,7 @@
           restaurants on the fly to a collection, and build up a list of
           favourites that populate the app map. Currently a work in progress. </p>
           <a class="viewlink"
-            href="http://github.com/nathanielgreen/reEat">View Github Repo</a>
+            href="https://github.com/nathanielgreen/reEat">View Github Repo</a>
         </div>
         <div class="unit half">
           <h4>Ravebot</h4>
@@ -90,7 +89,7 @@
           playlists that can be used in multiple ways. Built on the Ionic framework with a
           Ruby-on-Rails backend. </p>
           <a class="viewlink"
-            href="http://github.com/nathanielgreen/ravebot">View Github Repo</a>
+            href="https://github.com/nathanielgreen/ravebot">View Github Repo</a>
         </div>
       </div>
     </div>
@@ -105,7 +104,8 @@
       <p> For any business enquiries please contact me via my listed email
       address. </p>
       <div id="contactLinksDiv">
-        <li class="contactLinksLi"><a class="contactLinks" id="aGithub"
+        <ul>
+          <li class="contactLinksLi"><a class="contactLinks" id="aGithub"
           href="http://www.github.com/nathanielgreen">Github</a></li>
           <li class="contactLinksLi"><a class="contactLinks" id="aTwitter"
             href="http://www.twitter.com/ngreen2303">Twitter</a></li>
@@ -115,11 +115,12 @@
             href="https://uk.linkedin.com/in/nathaniel-green-727263107">LinkedIn</a></li>
           <li class="contactLinksLi"><a class="contactLinks" id="aEmail"
             href="mailto:n@ngreen.co">Email</a></li>
-        </div>
+        </ul>
+      </div>
     </div>
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="scripts.js"></script>
 </body>
-<html>
+</html>
