--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
     </div>
   </div>
 
+  <div id="footnote">
+    Website built and designed by Nathaniel Green.
+  </div>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="scripts.js"></script>
 </body>
