--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <img class="projectImg" src="./images/ushare.png" alt="Ushare">
           <p> An Android/iOS app that matches users based on their location and
           destination, to find others around them with whom they can share
-          an Uber Cab with. Built in 2 weeks in a team of four. More information
+          an Uber Cab. Built in 2 weeks in a team of four. More information
           on the Github repo. </p>
           <a class="viewlink"
             href="http://github.com/nathanielgreen/Ushare">View Github Repo</a>
