Split styling into different stylesheets

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta content="utf-8" http-equiv="encoding">
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700'
   rel='stylesheet' type='text/css'>
-  <link type="text/css" rel="stylesheet" href="style.css" />
+  <link type="text/css" rel="stylesheet" href="stylesheets/style.css" />
+  <link type="text/css" rel="stylesheet" href="stylesheets/buttons.css" />
+  <link type="text/css" rel="stylesheet" href="stylesheets/pagestyle.css" />
   <link type="text/css" rel="stylesheet" href="gridism.css" />
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -25,9 +27,9 @@
   </div>
 
   <div id="page0" class="evenPage">
-    <p id="topPtitle"> Hi, I'm Nathaniel Green. </p>
+    <p id="topTitle"> Hi, I'm Nathaniel Green. </p>
 
-    <p id="topPinfo"> Here you'll be able to find information about who I am, projects I have
+    <p id="topInfo"> Here you'll be able to find information about who I am, projects I have
     created/worked on, and how to contact me. </p>
   </div>
 
