--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   </div>
 
   <div id="page0" class="evenPage">
-    <p id="topPTitle"> Hi, I'm Nathaniel Green. </p>
+    <p id="topPtitle"> Hi, I'm Nathaniel Green. </p>
 
-    <p id="topPInfo"> Here you'll be able to find information about who I am, projects I have
+    <p id="topPinfo"> Here you'll be able to find information about who I am, projects I have
     created/worked on, and how to contact me. </p>
   </div>
 
