--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="gridism.css">
   <link rel="stylesheet" href="stylesheets/style.css">
-  <link rel="stylesheet" href="stylesheets/buttons.css">
-  <link rel="stylesheet" href="stylesheets/pagestyle.css">
 </head>
 
 <body>
@@ -26,9 +24,9 @@
   </div>
 
   <div id="page0" class="evenPage">
-    <p id="topPtitle"> Hi, I'm Nathaniel Green. </p>
+    <p id="topTitle"> Hi, I'm Nathaniel Green. </p>
 
-    <p id="topPinfo"> Here you'll be able to find information about who I am, projects I have
+    <p id="topInfo"> Here you'll be able to find information about who I am, projects I have
     created/worked on, and how to contact me. </p>
   </div>
 
@@ -70,7 +68,7 @@
           destination, to find others around them with whom they can share
           an Uber Cab. Built in 2 weeks in a team of four. More information
           on the Github repo. </p>
-          <a class="viewlink"
+          <a class="viewLink"
             href="https://github.com/nathanielgreen/Ushare">View Github Repo</a>
         </div>
       </div>
@@ -81,7 +79,7 @@
           <p> An app built with Meteor that allows users to save brand new unknown
           restaurants on the fly to a collection, and build up a list of
           favourites that populate the app map. Currently a work in progress. </p>
-          <a class="viewlink"
+          <a class="viewLink"
             href="https://github.com/nathanielgreen/reEat">View Github Repo</a>
         </div>
         <div class="unit half">
@@ -90,7 +88,7 @@
           <p> An Android/iOS app that allows you to manage and socially curate
           playlists that can be used in multiple ways. Built on the Ionic framework with a
           Ruby-on-Rails backend. </p>
-          <a class="viewlink"
+          <a class="viewLink"
             href="https://github.com/nathanielgreen/ravebot">View Github Repo</a>
         </div>
       </div>
