Fixed stylesheet call in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>N Green | Junior Web Developer</title>
 
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat:400,700">
-  <link rel="stylesheet" href="gridism.css">
+  <link rel="stylesheet" href="stylesheets/gridism.css">
   <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 
