Updated picture and About Page. Changed styling to remove body margin.

--- a/index.html
+++ b/index.html
@@ -36,13 +36,18 @@
       <h1>About</h1>
       <div class="grid">
         <div class="unit one-third">
-          <img id="selfie" src="./images/selfie.jpg" alt="selfie.jpg">
+          <img id="selfie" src="./images/profile.jpg" alt="profile.jpg">
         </div>
         <div class="unit two-thirds">
           <p> I'm a technology enthusiast with a passion for
           creating new things. I recently finished the Makers Academy coding course and
           am currently looking for full-time employment as a junior web developer in
           London. </p>
+          <p> I have a comfortable amount of experience and knowledge in a
+          variety of different technologies, such as Ruby, Javascript, HTML &
+          CSS, and multiple others. </p>
+          <p> I integrate the best coding practices; Test Driven Development,
+          Red-Green-Refactoring, and Agile Learning, into my daily workflow.
         </div>
       </div>
     </div>
