--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="unit one-third">
           <img id="selfie" src="./images/profile.jpg" alt="profile.jpg">
         </div>
-        <div class="unit two-thirds">
+        <div id="aboutText" class="unit two-thirds">
           <p> I'm a technology enthusiast with a passion for
           creating new things. I recently finished the Makers Academy coding course and
           am currently looking for full-time employment as a junior web developer in
