fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <div id="ushare-about">
           <p> Ushare is an Android & iOS app that matches users based on their
           current geolocation and their destination, to find others around
-          them with whom they can share an Uber Cab with. </p>
+          them whom they can share an Uber Cab with. </p>
           <p> This functionality provides users with a way to split the 
-          fare of an Uber Cab with other users when their friends or colleges
+          fare of an Uber Cab with other users when their friends or colleagues
           may not be available. </p> 
-          <p>The process of using Ushare is fast and simple, providing people an
+          <p>The process of using Ushare is fast and simple, providing people a
           quick and easy way to reduce the cost of their travel. </p>
         </div>
 
