Added Blog to contact section and replaced images with text

--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
   </div>
 
   <div class="banner">
+    <h1> ABOUT </h1>
+  </div>
+
+  <div id="about">
+
+    <p> I'm a technology enthusiast with a passion for
+    creating new things. I recently finished the Makers Academy coding
+    course and am currently looking for full-time employment as a junior web
+    developer in London. </p>
+    <p> I have a comfortable amount of experience and knowledge in a
+    variety of different technologies, such as Ruby, Javascript, HTML & 
+    CSS, and multiple others. </p>
+    <p> I integrate the best coding practices; Test Driven
+    Development, Red-Green-Refactoring, and Agile Learning, into my 
+    daily workflow. </p>
+  </div>
+
+  <div class="banner">
     <h1> PROJECTS </h1>
   </div>
 
@@ -144,21 +162,25 @@
   </div>
 
   <div id="contact">
-    <a class="contact-button" href="http://github.com/nathanielgreen/">
-      <img class="contact-img" id="github" src="images/githublogo.png">
-    </a>
-    <a class="contact-button" href="http://twitter.com/ngreen2303/">
-      <img class="contact-img" id="twitter" src="images/twitterlogo.png">
-    </a>
-    <a class="contact-button" href="http://github.com/nathanielgreen/CV/">
-      <img class="contact-img" id="cv" src="images/cvlogo.png">
-    </a>
-    <a class="contact-button" href="mailto:ngreen2303@gmail.com">
-      <img class="contact-img" id="gmail" src="images/gmaillogo.png">
-    </a>
-    <a class="contact-button" href="https://uk.linkedin.com/in/nathaniel-green-727263107">
-      <img class="contact-img" id="linkedin" src="images/linkedinlogo.png">
-    </a>
+    <div id="contact-left">
+      <h2 class="contact-header"> Social </h2>
+        <p><a class="contact-link" 
+          href="mailto:n@ngreen.co">Email</a></p>
+        <p><a class="contact-link"
+          href="https://twitter.com/ngreen2303">Twitter</p>
+        <p><a class="contact-link"
+          href="https://medium.com/@nathanielgreen">Blog</p>
+    </div>
+    <div id="contact-right">
+      <h2 class="contact-header"> Coding </h2>
+        <p><a class="contact-link"
+          href="https://github.com/nathanielgreen">Github</a></p>
+        <p><a class="contact-link"
+          href="https://github.com/nathanielgreen/CV">CV</a></p>
+        <p><a class="contact-link"
+          href="https://www.linkedin.com/in/nathaniel-green-727263107">LinkedIn</a></p>
+    </div>
+      
   </div>
 
 </body>
