Fixed RemoteMe broken link

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
 
         <div id="remoteme-buttons">
-          <a href="http://remoteme.ngreen.co">
+          <a href="http://remoteme.herokuapp.com">
             <button class="button">View Live Website</button>
           </a>
           <a href="http://github.com/nathanielgreen/remoteme">
