Adding Chromebooks and Linux guide to website in progress

--- a/index.html
+++ b/index.html
@@ -156,6 +156,22 @@
       </div>
   </div>
 
+  <div id="chromebooks">
+    <div id="chromebooks-title" class="project-title">
+      <h1>Chromebooks & Linux <span class="greenw-rods">Guide</span></h1>
+    </div>
+
+    <div id="chromebooks-content">
+        
+      <div id="chromebooks-about">
+      </div>
+
+      <div id="chromebooks-buttons">
+      </div>
+
+    </div>
+  </div>
+
 
   <div class="banner">
     <h1> CONTACT </h1>
