Chromebooks and Linux guide section in progress

--- a/index.html
+++ b/index.html
@@ -158,12 +158,22 @@
 
   <div id="chromebooks">
     <div id="chromebooks-title" class="project-title">
-      <h1>Chromebooks & Linux <span class="greenw-rods">Guide</span></h1>
+      <h1>Chromebooks & <span class="green-words">Linux Guide</span></h1>
     </div>
 
     <div id="chromebooks-content">
         
       <div id="chromebooks-about">
+        <p>A how-to guide on how to get started using Chromebooks for web
+        development</p>
+        <p>The guide is primarily built for Makers Academy students after
+        their 12 weeks of using macOS for development and how they can make the
+        change over to Linux on Chromebooks for their future web development
+        needs.</p>
+        <p>The guide also goes into futher details on Linux for beginners such
+        as providing information on distributions, desktop environments, and
+        window managers.</p>
+
       </div>
 
       <div id="chromebooks-buttons">
