Added background image for Chromebooks and Linux guide section

--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
       </div>
 
       <div id="chromebooks-buttons">
+        <a href="https://github.com/nathanielgreen/chromebooks_and_linux">
+          <button class="button">View Guide</button>
+        </a>
       </div>
 
     </div>
