Adding fadein animations for content. jQuery added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   type='text/css'>
   <link href="//fonts.googleapis.com/css?family=Montserrat:400,700"
   rel='stylesheet' type='text/css'>
+
+  <!-- jQuery -->
+  <script
+  src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 <body>
 
@@ -48,7 +52,7 @@
         <h1>Ushare<span class="green-words">.</span></h1>
       </div>
 
-      <div id="ushare-content">
+      <div id="ushare-content" class="fadein">
 
         <div id="ushare-about">
           <p> Ushare is an Android & iOS app that matches users based on their
@@ -78,7 +82,7 @@
         <h1> Show<span class="green-words">Star</span> Entertainments </h1>
       </div>
 
-      <div id="showstar-content">
+      <div id="showstar-content" class="fadein">
 
         <div id="showstar-about">
           <p> A website built for the company ShowStar Entertainments. </p>
@@ -107,7 +111,7 @@
         <h1> Remote<span class="green-words">Me</span></h1>
       </div>
 
-      <div id="remoteme-content">
+      <div id="remoteme-content" class="fadein">
 
         <div id="remoteme-about">
           <p> Remote Me, is a web app that allows users to
@@ -136,7 +140,7 @@
         <h1> The <span class="green-words">Brooklyn</span> Bar </h1>
       </div>
 
-      <div id="brooklyn-content">
+      <div id="brooklyn-content" class="fadein">
 
         <div id="brooklyn-about">
           <p> A website built for 'The Brooklyn Bar' located in Loughborough. </p>
@@ -161,7 +165,7 @@
       <h1>Chromebooks & <span class="green-words">Linux Guide</span></h1>
     </div>
 
-    <div id="chromebooks-content">
+    <div id="chromebooks-content" class="fadein">
         
       <div id="chromebooks-about">
         <p>A how-to guide on how to get started using Chromebooks for web
@@ -212,5 +216,6 @@
       
   </div>
 
+  <script src="scripts.js"></script>
 </body>
 </html>
