Added linux background and information in about section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
   </div>
 
   <div id="about">
-    <p>Hi, I'm Nathaniel Green, a freelance web developer based in London, UK.
+    <p>Hi, I'm Nathaniel Green, a freelance web developer based in London,
+    UK.</p>
+    <p>Below you will find some of the previous work I have done, as well as
+    some personal open-source projects of mine, and my contact details.</p>
+    <hr></hr>
+    <p>I am available to hire for short term projects, as well as being able to
+    build small, lightweight websites/apps for business or personal use. I
+    can also provide custom graphics and logos, along with the set up of custom
+    domains and email addresses.</p>
+    <p>My hourly rate is currently £12/hr, however this may be flexible depending 
+    on client budget and project size.</p>
+    <p>If you'd like to get in touch and discuss a potential project you would
+    like building, email me at
+    <a href="mailto:work@ngreen.co">work@ngreen.co</a>.</p>
 
   </div>
 
@@ -190,22 +203,23 @@
 
   <div id="contact">
     <div id="contact-left">
-      <h2 class="contact-header"> Social </h2>
+      <h2 class="contact-header">Social</h2>
         <p><a class="contact-link" 
           href="mailto:n@ngreen.co">Email</a></p>
         <p><a class="contact-link"
-          href="https://twitter.com/ngreen2303">Twitter</p>
+            href="https://twitter.com/ngreen2303">Twitter</a></p>
         <p><a class="contact-link"
-          href="https://medium.com/@nathanielgreen">Blog</p>
+            href="https://medium.com/@nathanielgreen">Blog</a></p>
     </div>
     <div id="contact-right">
-      <h2 class="contact-header"> Coding </h2>
+      <h2 class="contact-header">Business</h2>
         <p><a class="contact-link"
           href="https://github.com/nathanielgreen">Github</a></p>
         <p><a class="contact-link"
           href="https://github.com/nathanielgreen/CV">CV</a></p>
         <p><a class="contact-link"
-          href="https://www.linkedin.com/in/nathaniel-green-727263107">LinkedIn</a></p>
+          href="https://www.linkedin.com/in/nathaniel-green-727263107">
+          LinkedIn</a></p>
     </div>
       
   </div>
