Updating theme and adding new images

--- a/index.html
+++ b/index.html
@@ -55,13 +55,12 @@
     <div class="project-content">
 
       <div class="project-about">
-        <p> A website built for the company 'ShowStar Entertainments'. </p>
-        The  websites main function is to showcase various clubs and events owned
+        <p>A website built for the company 'ShowStar Entertainments'.</p>
+        <p>The websites main function is to showcase various clubs and events owned
         by ShowStar Entertainments as well as provide information and news on
-        upcoming events and/or changes. </p>
-        <p>  The website was built in close contact with the client and has 
-        been built to very specific design requests. </p>
-        </p>
+        upcoming events and/or changes.</p>
+        <p>The website was built in close contact with the client and has 
+        been built to very specific design requests.</p>
       </div>
 
       <div class="project-buttons">
@@ -85,7 +84,7 @@
 
     <div class="project-content" class="fadein">
 
-      <div class="project-about">
+      <div id="brooklyn-about" class="project-about">
         <p> A website built for 'The Brooklyn Bar' located in Loughborough. </p>
         <p> The website functions as a platform for 'The Brooklyn Bar' to take
         and manage bookings of the venue, as well as post updates and provide
@@ -201,15 +200,16 @@
     <h1>Contact</h1>
   </div>
 
+  <!-- Contact -->
   <div id="contact">
     <div id="contact-left">
       <h2 class="contact-header">Social</h2>
-        <p><a class="contact-link" 
-          href="mailto:n@ngreen.co">Email</a></p>
-        <p><a class="contact-link"
-            href="https://twitter.com/ngreen2303">Twitter</a></p>
-        <p><a class="contact-link"
-            href="https://medium.com/@nathanielgreen">Blog</a></p>
+      <p><a class="contact-link" 
+        href="mailto:n@ngreen.co">Email</a></p>
+      <p><a class="contact-link"
+          href="https://twitter.com/ngreen2303">Twitter</a></p>
+      <p><a class="contact-link"
+          href="https://medium.com/@nathanielgreen">Blog</a></p>
     </div>
     <div id="contact-right">
       <h2 class="contact-header">Business</h2>
@@ -221,8 +221,8 @@
           href="https://www.linkedin.com/in/nathaniel-green-727263107">
           LinkedIn</a></p>
     </div>
-      
   </div>
+  <!-- Contact End -->
 
   <script src="scripts.js"></script>
 </body>
