--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
       <div class="project-about">
         <p>A website built for the company 'ShowStar Entertainments'.</p>
-        <p>The websites main function is to showcase various clubs and events owned
+        <p>The website's main function is to showcase various clubs and events owned
         by ShowStar Entertainments as well as provide information and news on
         upcoming events and/or changes.</p>
-        <p>The website was built in close contact with the client and has 
+        <p>The website was built in close consultation with the client and has 
         been built to very specific design requests.</p>
       </div>
 
